# django-structure

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  entrypoint.sh  manage.py  pyproject.toml
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py  schemas.py
core/api/v1/products/: handlers.py  schemas.py
core/apps/common/: exceptions.py  models.py
core/apps/customers/: admin.py  entities.py  models.py
core/apps/customers/exceptions/: codes.py
core/apps/customers/migrations/: 0001_initial.py
core/apps/customers/services/: auth.py  codes.py  customers.py  senders.py
core/apps/products/: admin.py  apps.py
core/apps/products/entities/: products.py
core/apps/products/migrations/: 0001_initial.py  0002_alter_product_description_alter_product_price.py
core/apps/products/models/: __init__.py  products.py
core/apps/products/services/: products.py
core/project/: urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml
tests/factories/: products.py
tests/services/: conftest.py  test_products.py
