[tool.poetry]
name = "some-structure"
version = "0.1.0"
description = ""
authors = ["zakhep66 <sur.mikhael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.web.dependencies]
django = "^5.0.7"


[tool.poetry.group.env.dependencies]
django-environ = "^0.11.2"



[tool.poetry.group.db.dependencies]
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
